replacing h2 with postgresql

--- a/SpringJDBCEx/src/main/resources/application.properties
+++ b/SpringJDBCEx/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=SpringJDBCEx
+spring.datasource.url=jdbc:postgresql://localhost:5432/springjdbc
+spring.datasource.username=postgres
+spring.datasource.password=ms8000
+spring.datasource.driver-class-name=org.postgresql.Driver
